--- a/src/style.css
+++ b/src/style.css
@@ -52,7 +52,7 @@ a{
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(255, 249, 233, 0.93);
+  background-color: rgba(255, 249, 233, 0.90);
   height: 100vh;
   z-index: 3;
 }
@@ -104,7 +104,7 @@ header .social:active{
 }
 hr{
     display:block;
-    height:2px; 
+    height:4px; 
     width: 100%;
     margin: 15px 0;
     background-color: var(--color-text);
@@ -361,6 +361,8 @@ ul {
    
 }
 
+
+
 @media screen and (min-width: 768px) {
     .time-ven {
         display:flex;
@@ -374,6 +376,11 @@ ul {
 
 }
 
+.current-event {
+    background: var(--color-text);
+    color: var(--color-secondary);
+}
+
 .venue iframe {
     width: 100%;
     height: 250px;
@@ -384,6 +391,32 @@ ul {
     }
 
 }
+
+.event_list{
+    display:flex;
+    flex-direction: column;
+    gap: 20px;
+    
+    width:100%;
+    height:350px;
+    overflow-y: scroll;
+    padding:10px;
+    
+    border-radius:10px;
+
+    background-color: whitesmoke;
+    box-shadow: var(--box-shadow-basic);
+
+}
+.event {
+    padding:10px;
+    text-align:center;
+}
+.event.current-event{
+    background-color: var(--color-text);
+    color:var(--color-secondary);
+}
+
 .contacts {
     display:grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -466,7 +499,7 @@ footer hr {
 }
 .swiper img {
     margin: 0 auto;
-    max-height: 400px;
+    max-height: 350px;
 }
 
 .swiper-button-next:after, .swiper-button-prev:after {
@@ -483,4 +516,37 @@ footer hr {
     background-color: var(--color-text); 
     padding: 10px;
     border-radius: 5px;
-  }
+}
+
+.btn-group {
+    padding:10px;
+    display:flex;
+    width:100%;
+    justify-content:space-around;
+
+}
+button {
+    display:block;
+    padding:5px 20px;
+    font-family: 'Yeseva One', sans-serif;
+    font-size:1.25rem;
+    background:none;
+    border:none;
+    border-radius:5px;
+    color:var(--color-text);
+    cursor:pointer;
+    transition: all  cubic-bezier(0.47, 0, 0.745, 0.715) 150ms;
+}
+
+button:hover{
+    background:var(--color-text);
+    color:var(--color-secondary);
+    opacity:.6;
+    transition: all  cubic-bezier(0.47, 0, 0.745, 0.715) 150ms;
+
+}
+button.active {
+    background:var(--color-text);
+    color:var(--color-secondary);
+    transition: all  cubic-bezier(0.47, 0, 0.745, 0.715) 150ms;
+}
